@@ -151,6 +151,7 @@ All (GUI):
 - Added wxTB_NO_TOOLTIPS style (Igor Korot)
 - Added wxGenericDirCtrl::CollapsePath() (Christian Buhtz)
 - Fixed 64-bit issue in wxNotebook causing segfaults on Tru64 Unix.
+- Made it possible to associate context help to a region of a window
 
 wxMSW:
 
